--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
   <body>
     <header>
       <ul>
-        <li><a href="#">PAGE1</a></li>
-        <li><a href="#">PAGE2</a></li>
-        <li><a href="#">PAGE3</a></li>
-        <li><a href="#">PAGE4</a></li>
+        <li><a href="#">menu1</a></li>
+        <li><a href="#">menu2</a></li>
+        <li><a href="#">menu3</a></li>
+        <li><a href="#">menu4</a></li>
       </ul>
     </header>
     <div id="container">
       <section id="con01"></section>
       <section id="con02">
         <div class="txt">
-          <div class="reset">글자입니다</div>
+          <div class="reset">글자글자입니다</div>
         </div>
       </section>
       <section id="con03">
